@@ -1,3 +1,8 @@
+2008-02-07  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* Parser/TagDatabaseManager.cs: Improve error handling. Should fix "Bug
+	  359567 - MonoDevelop crashes when creating/opening C++ Console Project".
+
 2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* CBinding.addin.xml: Update MD version.
